Fix package information

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -611,6 +611,7 @@
   description: Biomolecular Illustration Tool
   categories: graphics
   tags: pdb
+  version: none
 
 # --- Numerical libraries ---
 
@@ -1080,7 +1081,7 @@
   tags: dft-d dispersion-correction
 
 - name: libmbd
-  github: jhrmnn/libmbd
+  github: libmbd/libmbd
   description: Many-body dispersion library
   categories: scientific
   tags: dispersion-correction
@@ -1097,6 +1098,7 @@
   description: electronic structure program with coupled cluster, multiscale and multilevel methods
   categories: scientific
   tags: electronic-structure coupled-cluster
+  license: GPL-3.0
 
 - name: tinker
   github: TinkerTools/tinker
@@ -1111,6 +1113,7 @@
   description: A first-principles materials simulation code using DFT
   categories: scientific
   tags: electronic-structure density-functional-theory
+  license: GPL-3.0
 
 - name: Dalton
   gitlab: dalton/dalton
