Localize get involved header and package search placeholder

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -156,6 +156,8 @@ packages:
   featured_topics: Featured topics
   browse: Browse Packages by Category
   search_for_a_project: Search for a project
+  search_for_a_package: Search for a package
 
 community:
   header: Fortran-lang Community Projects
+  get_involved: Get Involved
