--- a/_i18n/es.yml
+++ b/_i18n/es.yml
@@ -157,6 +157,8 @@ packages:
   featured_topics: Temas destacados
   browse: Examinar paquetes por categorias
   search_for_a_project: Buscar un proyecto
+  search_for_a_package: Buscar un paquete
 
 community:
   header: Proyectos de la comunidad de Fortran-lang
+  get_involved: Participar
