--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -156,6 +156,8 @@ packages:
   featured_topics: Mots-clés les plus courants
   browse: Parcourir les paquets par catégorie
   search_for_a_project: Chercher un projet
+  search_for_a_package: Chercher un paquet
 
 community:
   header: Projets de la communauté Fortran-lang
+  get_involved: Participez
