Add additional package tags for Siesta.

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1112,7 +1112,7 @@
   gitlab: siesta-project/siesta
   description: A first-principles materials simulation code using DFT
   categories: scientific
-  tags: electronic-structure density-functional-theory
+  tags: electronic-structure density-functional-theory molecular-dynamics mpi
   license: GPL-3.0
 
 - name: Dalton
