Fix typo in tag.

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -195,7 +195,7 @@
   gitlab: elsi_project/elsi_interface
   description: A software interface designed for electronic structure codes to connect with ELPA, libOMM, PEXSI, EigenExa, SLEPc, NTPoly, BSEPACK, LAPACK, MAGMA, and other solver libraries.
   categories: interfaces
-  tags: electronic-stucture mpi gpu
+  tags: electronic-structure mpi gpu
   license: BSD-3-Clause
 
 - name: FKB
