packages: fix typo in tag.

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -625,7 +625,7 @@
   github: Reference-LAPACK/lapack
   description: Routines for numerical linear algebra
   categories: numerical
-  tags: blas linear algera
+  tags: blas linear algebra
   license: BSD-3-Clause
 
 - name: ElmerFEM
