packages: use linear-algebra tag.

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -619,13 +619,13 @@
   github: xianyi/OpenBLAS
   description: Optimized BLAS library based on GotoBLAS2
   categories: numerical
-  tags: blas linear algebra
+  tags: blas linear-algebra
 
 - name: LAPACK
   github: Reference-LAPACK/lapack
   description: Routines for numerical linear algebra
   categories: numerical
-  tags: blas linear algebra
+  tags: blas linear-algebra
   license: BSD-3-Clause
 
 - name: ElmerFEM
@@ -709,13 +709,13 @@
   github: cp2k/dbcsr
   description: Distributed block compresseed sparse row matrix library
   categories: numerical
-  tags: linear algebra parallel mpi openmp cuda hip
+  tags: linear-algebra parallel mpi openmp cuda hip
 
 - name: PSBLAS
   github: sfilippone/psblas3
   description: Parallel Sparse BLAS
   categories: numerical data-types
-  tags: linear algebra mpi
+  tags: linear-algebra mpi
   license: BSD-3-Clause
 
 - name: GALAHAD
