packages: create 2-word tags with -programming.

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -722,14 +722,14 @@
   github: ralna/GALAHAD
   description: Modules for nonlinear optimization
   categories: numerical
-  tags: least squares active set quadratic programming interior point convex programming linear programming
+  tags: least squares active set quadratic-programming interior point convex-programming linear-programming
   license: LGPL-3.0
 
 - name: slsqp
   github: jacobwilliams/slsqp
   description: SLSQP nonlinear constrained optimizer
   categories: numerical
-  tags: nonlinear programming equality inequality constraints
+  tags: nonlinear-programming equality inequality constraints
   license: BSD-3-Clause AND MIT
 
 - name: NumDiff
