--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -195,7 +195,7 @@
   gitlab: elsi_project/elsi_interface
   description: A software interface designed for electronic structure codes to connect with ELPA, libOMM, PEXSI, EigenExa, SLEPc, NTPoly, BSEPACK, LAPACK, MAGMA, and other solver libraries.
   categories: interfaces
-  tags: electronic-stucture mpi gpu
+  tags: electronic-structure mpi gpu
   license: BSD-3-Clause
 
 - name: FKB
@@ -619,13 +619,13 @@
   github: xianyi/OpenBLAS
   description: Optimized BLAS library based on GotoBLAS2
   categories: numerical
-  tags: blas linear algebra
+  tags: blas linear-algebra
 
 - name: LAPACK
   github: Reference-LAPACK/lapack
   description: Routines for numerical linear algebra
   categories: numerical
-  tags: blas linear algera
+  tags: blas linear-algebra
   license: BSD-3-Clause
 
 - name: ElmerFEM
@@ -709,27 +709,27 @@
   github: cp2k/dbcsr
   description: Distributed block compresseed sparse row matrix library
   categories: numerical
-  tags: linear algebra parallel mpi openmp cuda hip
+  tags: linear-algebra parallel mpi openmp cuda hip
 
 - name: PSBLAS
   github: sfilippone/psblas3
   description: Parallel Sparse BLAS
   categories: numerical data-types
-  tags: linear algebra mpi
+  tags: linear-algebra mpi
   license: BSD-3-Clause
 
 - name: GALAHAD
   github: ralna/GALAHAD
   description: Modules for nonlinear optimization
   categories: numerical
-  tags: least squares active set quadratic programming interior point convex programming linear programming
+  tags: least squares active set quadratic-programming interior point convex-programming linear-programming
   license: LGPL-3.0
 
 - name: slsqp
   github: jacobwilliams/slsqp
   description: SLSQP nonlinear constrained optimizer
   categories: numerical
-  tags: nonlinear programming equality inequality constraints
+  tags: nonlinear-programming equality inequality constraints
   license: BSD-3-Clause AND MIT
 
 - name: NumDiff
@@ -831,7 +831,7 @@
   github: QEF/q-e
   description: Quantum ESPRESSO is an integrated suite of Open-Source computer codes for electronic-structure calculations and materials modeling at the nanoscale
   categories: scientific
-  tags: electronic structure calculations quantum chemistry physics molecular dynamics mpi
+  tags: electronic-structure quantum-chemistry physics molecular-dynamics mpi
 
 - name: BandUP
   github: band-unfolding/bandup
@@ -842,7 +842,7 @@
   github: FluidityProject/fluidity
   description: Computational fluid dynamics code with adaptive unstructured mesh capabilities
   categories: scientific
-  tags: cfd computational fluid dynamics unstructured
+  tags: cfd computational-fluid-dynamics unstructured
 
 - name: fortran-machine
   github: mapmeld/fortran-machine
@@ -852,14 +852,14 @@
   github: Nek5000/Nek5000
   description: MPI parallel higher-order spectral element CFD solver
   categories: scientific
-  tags: cfd computational fluid dynamics spectral element higher order mpi parallel les rans
+  tags: cfd computational-fluid-dynamics spectral element higher order mpi parallel les rans
   license: BSD-3-Clause
 
 - name: cp2k
   github: cp2k/cp2k
   description: quantum chemistry and solid state physics software package that can perform atomistic simulations
   categories: scientific
-  tags: quantum chemistry physics molecular dynamics metadynamics mpi cuda
+  tags: quantum-chemistry physics molecular-dynamics metadynamics mpi cuda
   license: GPL-2.0
 
 - name: Castro
@@ -873,14 +873,14 @@
   github: libAtoms/QUIP
   description: The QUIP package is a collection of software tools to carry out molecular dynamics simulations.
   categories: scientific
-  tags: electronic structure calculations quantum chemistry physics molecular dynamics mpi qm-mm
+  tags: electronic-structure quantum-chemistry physics molecular-dynamics mpi qm-mm
   license: GPL-2
 
 - name: ABINIT
   github: abinit/abinit
   description: ABINIT is a software suite to calculate the optical, mechanical, vibrational, and other observable properties of materials
   categories: scientific
-  tags: electronic structure calculations quantum chemistry physics molecular dynamics mpi
+  tags: electronic-structure quantum-chemistry physics molecular-dynamics mpi
 
 - name: NASTRAN 93
   github: nasa/NASTRAN-93
@@ -902,7 +902,7 @@
   github: nwchemgit/nwchem
   description: Open Source High-Performance Computational Chemistry
   categories: scientific
-  tags: computational-chemistry parallel-computing electronic-structure-calculations molecular-simulations density-functional-theory hartree-fock quantum-chemistry
+  tags: computational-chemistry parallel-computing electronic-structure molecular-simulations density-functional-theory hartree-fock quantum-chemistry
   license: ECL-2.0
 
 - name: "OFF"
@@ -925,7 +925,7 @@
   github: p-costa/CaNS
   description: A code for fast, massively-parallel direct numerical simulations (DNS) of canonical flows
   categories: scientific
-  tags: fluid dynamics fluid simulation computational fluid dynamics turbulence high performance computing hpc cfd
+  tags: fluid-dynamics fluid-simulation computational-fluid-dynamics turbulence high-performance-computing hpc cfd
   version: none
 
 - name: ICAR
@@ -944,21 +944,21 @@
   github: mdolab/adflow
   description: A finite volume RANS solver tailored for gradient-based aerodynamic design optimization
   categories: scientific
-  tags: simulation computational fluid dynamics automatic differentiation adjoint structured multiblock overset python hpc cfd mpi
+  tags: simulation computational-fluid-dynamics automatic-differentiation adjoint structured multiblock overset python hpc cfd mpi
   license: LGPL-2.1-only
 
 - name: Truchas
   gitlab: truchas/truchas
   description: 3D Multiphysics Simulation of Metal Casting and Processing
   categories: scientific
-  tags: fluid dynamics metal casting multiphysics hpc
+  tags: fluid-dynamics metal-casting multiphysics hpc
   license: BSD-3-Clause
 
 - name: dftatom
   github: certik/dftatom
   description: Routines for Radial Integration of Dirac, Schrödinger, and Poisson Equations
   categories: scientific
-  tags: electronic structure calculations atomic
+  tags: electronic-structure atomic
   license: MIT
   version: 1.0.4
 
@@ -1112,7 +1112,7 @@
   gitlab: siesta-project/siesta
   description: A first-principles materials simulation code using DFT
   categories: scientific
-  tags: electronic-structure density-functional-theory
+  tags: electronic-structure density-functional-theory molecular-dynamics mpi
   license: GPL-3.0
 
 - name: Dalton
