Add links to other related Fortran communities
- r/fortran
- comp.lang.fortran
- Stack Overflow

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -64,6 +64,18 @@ reference-links:
     url: https://www.fortran90.org/
     description: Fortran Best Practices guide, Python/Fortran Rosetta Stone, Fortran FAQ
 
+  - name: comp.lang.fortran
+    url: https://groups.google.com/g/comp.lang.fortran
+    description: Mailing list for all Fortran related things
+
+  - name: "Stack Overflow: Fortran"
+    url: https://stackoverflow.com/questions/tagged/fortran
+    description: Question and answers to coding questions
+
+  - name: r/fortran
+    url: https://www.reddit.com/r/fortran/
+    description: Reddit for Fortran related topics
+
   - name: "Fortran 2018 Standard Interpretation Document"
     url: https://j3-fortran.org/doc/year/18/18-007r1.pdf
     description: "J3/18-007r1 F2018, specification of the base Fortran 2018 language"
