--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1143,6 +1143,13 @@
   categories: scientific
   tags: electronic-structure wavelets density-functional-theory
   license: custom
+  
+- name: DL_POLY_4
+  gitlab: ccp5/dl-poly
+  description: classical molecular dynamics 
+  categories: scientific
+  tags: molecular-modeling
+  license: LGPL-3.0
 
 # --- Examples / demos / templates ---
 
