--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1144,6 +1144,14 @@
   tags: electronic-structure wavelets density-functional-theory
   license: custom
 
+- name: DL_POLY_4
+  gitlab: ccp5/dl-poly
+  description: classical molecular dynamics code developped at Daresbury Laboratory since 1992
+  categories: scientific
+  tags: molecular-dynamics mpi
+  version: 5.0
+  license: LGPL-3.0
+
 # --- Examples / demos / templates ---
 
 - name: Fortran 2018 examples
