--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -102,7 +102,7 @@ reference-courses:
   - name: "Kursmaterial für Wissenschaftliches Programmieren (Modern Fortran, 2017)"
     url: https://www.bccms.uni-bremen.de/cms/people/b-aradi/wissen-progr/modern-fortran/2017
     description: >-
-      from Bálint Aradi at Bremen Center for Computational Materials Science
+      from Bálint Aradi at Bremen Center for Computational Materials Science (German)
 
   - name: "Formations Fortran"
     url: http://www.idris.fr/formations/fortran/
