--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -106,6 +106,8 @@ reference-courses:
 
   - name: "Formations Fortran"
     url: http://www.idris.fr/formations/fortran/
+    description: >-
+      Fortran course from beginner to expert level (French)
 
   - name: "Modern Fortran Programming for Chemists and Physicists"
     url: http://www.chem.helsinki.fi/~manninen/fortran2014/
