--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -214,6 +214,10 @@ reference-courses:
     description: >-
       by C.-K. Shene, Michigan Technologial University
 
+  - name: "Exploring Modern Fortran Basics"
+    url: https://www.manning.com/books/exploring-modern-fortran-basics
+    description: >-
+      by Milan Curcic, excerpt (Chapters 2, 3, and 4) from Modern Fortran - Building Efficient Parallel Applications
 
 # Print books listed at the bottom of the 'Learn' landing page
 #
