--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -476,13 +476,13 @@
   version: none
 
 - name: h5fortran
-  github: scivision/h5fortran
+  github: geospace-code/h5fortran
   description: Simple, robust, thin HDF5 polymorphic read/write interface
   categories: io
   tags: hdf5
 
 - name: nc4fortran
-  github: scivision/nc4fortran
+  github: geospace-code/nc4fortran
   description: Object-oriented interface for NetCDF4 in Fortran
   categories: io
   tags: netcdf
@@ -1159,7 +1159,6 @@
   description: Easy examples of scientific computing with modern, powerful, easy Fortran 2018 standard
   categories: examples
   tags: block coarray contiguous mpi namelist openmp random submodule iso_fortran_env
-  license: GPL-2
 
 - name: Fortran patterns
   github: farhanjk/FortranPatterns
