--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -803,6 +803,16 @@
   license: MIT
   version: none
 
+- name: MapTran3D
+  github: geospace-code/maptran3d
+  description: Geodesy, 3D coordinate conversions for ECEF, ENU, ECI, ...
+  categories: numerical
+
+- name: RPNcalc
+  github: scivision/rpn-calc-fortran
+  description: Reverse Polish Notation calculator for interactive console use
+  categories: numerical
+
 # --- Scientific codes ---
 
 - name: "DFTB+"
@@ -1152,6 +1162,12 @@
   version: 5.0
   license: LGPL-3.0
 
+- name: Gemini3D
+  github: gemini3d/gemini3d/
+  description: 3D ionospheric model covering local (> 10 gyroradii) to global scales.
+  categories: scientific
+
+
 # --- Examples / demos / templates ---
 
 - name: Fortran 2018 examples
@@ -1187,3 +1203,9 @@
   description: A parallel shallow water equations solver
   categories: examples
   version: none
+
+- name: Blocktran
+  github: fortran-gaming/blocktran
+  description: Object-oriented Fortran falling block game using Curses console graphics
+  categories: examples
+  tags: game
