--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -925,7 +925,7 @@
   
 - name: QUICK
   github: merzlab/QUICK
-  description: A GPU-enabled ab intio quantum chemistry software package
+  description: A GPU-enabled ab initio quantum chemistry software package
   categories: scientific
   tags: computational-chemistry parallel-computing electronic-structure molecular-simulations density-functional-theory hartree-fock quantum-chemistry
   license: MPL-2.0
