added the SNaC package

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1166,7 +1166,13 @@
   github: gemini3d/gemini3d/
   description: 3D ionospheric model covering local (> 10 gyroradii) to global scales.
   categories: scientific
-
+  
+- name: SNaC
+  github: p-costa/SNaC
+  description: A multi-block solver for massively parallel direct numerical simulations (DNS) of fluid flows 
+  categories: scientific
+  tags: fluid-dynamics fluid-simulation computational-fluid-dynamics turbulence high-performance-computing hpc cfd
+  version: none
 
 # --- Examples / demos / templates ---
 
