Add crest program to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1111,6 +1111,13 @@
   tags: quantum-chemistry computational-chemistry atomistic-simulations
   license: LGPL-3.0-or-later
 
+- name: crest
+  github: grimme-lab/crest
+  description: Conformer-rotamer ensemble search tool
+  categories: scientific
+  tags: computational-chemistry atomistic-simulations conformational-analysis metadynamics
+  license: GPL-3.0-or-later
+
 - name: eT
   gitlab: eT-program/eT
   description: electronic structure program with coupled cluster, multiscale and multilevel methods
