Add LATTE tight-binding molecular dynamics code to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -822,6 +822,13 @@
   license: LGPL-3.0-or-later
   tags: tight-binding quantum-mechanics density-functional-theory
 
+- name: LATTE
+  github: lanl/LATTE
+  description: Open source density functional tight binding molecular dynamics
+  categories: scientific
+  license: GPL-2.0
+  tags: tight-binding molecular-dynamics
+
 - name: WRF
   github: wrf-model/WRF
   description: Weather Research and Forecasting model
