--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -115,6 +115,12 @@
   license: GPL-3.0
   version: none
 
+- name: flook
+  github: ElectronicStructureLibrary/flook
+  desciption: Library for running an embedded Lua interpreter
+  categories: interfaces
+  tags: lua
+
 - name: tcp-client-server
   github: modern-fortran/tcp-client-server
   description: A minimal Fortran TCP client and server demonstrating c interoperability
