Add fortran-lua53, aotus, LuaF to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -121,6 +121,29 @@
   categories: interfaces
   tags: lua
 
+- name: LuaF
+  url: https://chiselapp.com/user/vadimz/repository/luaf/
+  description: Fortran 2003/2008 bindings to Lua 5.1
+  categories: interfaces
+  tags: lua
+  license: MIT
+  version: none
+
+- name: aotus
+  url: https://osdn.net/projects/apes/scm/hg/aotus/
+  description: Fortran wrapper around the C-API of the Lua scripting language
+  categories: interfaces
+  tags: lua
+  license: MIT
+  version: none
+
+- name: fortran-lua53
+  url: interkosmos/fortran-lua53
+  description: Fortran 2008 interface bindings to Lua 5.3
+  categories: interfaces
+  tags: lua
+  version: none
+
 - name: tcp-client-server
   github: modern-fortran/tcp-client-server
   description: A minimal Fortran TCP client and server demonstrating c interoperability
