Fix Gemini3D entry in package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1184,7 +1184,7 @@
   license: LGPL-3.0
 
 - name: Gemini3D
-  github: gemini3d/gemini3d/
+  github: gemini3d/gemini3d
   description: 3D ionospheric model covering local (> 10 gyroradii) to global scales.
   categories: scientific
   
