--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -328,7 +328,7 @@
   
 - name: convert_FORTRAN_case
   github:  dav05/convert_FORTRAN_case
-  description: case conversion of files writen in fixed form fortran
+  description: Case conversion of files written in fixed form Fortran
   categories: programming
   tags: formatter converter
   license: GPL-3.0  
