--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -331,7 +331,7 @@
   description: Case conversion of files written in fixed form Fortran
   categories: programming
   tags: formatter converter
-  license: GPL-3.0  
+  version: none  
 
 # --- Data types ---
 
