--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1231,6 +1231,18 @@
   tags: fluid-dynamics fluid-simulation computational-fluid-dynamics turbulence high-performance-computing hpc cfd
   version: none
 
+- name: FMM3D
+  github: flatironinstitute/FMM3D
+  description: Compute N-body interactions governed by the Laplace and Helmholtz equations, to a specified precision, in three dimensions, on a multi-core shared-memory machine.
+  categories: scientific
+  license: Apache-2.0
+
+- name: fmm2d
+  github: flatironinstitute/fmm2d
+  description: Compute N-body interactions governed by the Laplace and Helmholtz equations, to a specified precision, in two dimensions, on a multi-core shared-memory machine.
+  categories: scientific
+  license: Apache-2.0
+
 # --- Examples / demos / templates ---
 
 - name: Fortran 2018 examples
