--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1234,7 +1234,8 @@
 - name: FMM3D
   github: flatironinstitute/FMM3D
   description: Compute N-body interactions governed by the Laplace and Helmholtz equations, to a specified precision, in three dimensions, on a multi-core shared-memory machine.
-  categories: scientific
+  categories: numerical
+  tags: fast-multipole-method
   license: Apache-2.0
 
 - name: fmm2d
