--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1241,7 +1241,8 @@
 - name: fmm2d
   github: flatironinstitute/fmm2d
   description: Compute N-body interactions governed by the Laplace and Helmholtz equations, to a specified precision, in two dimensions, on a multi-core shared-memory machine.
-  categories: scientific
+  categories: numerical
+  tags: fast-multipole-method
   license: Apache-2.0
 
 # --- Examples / demos / templates ---
