Fix key, add license

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -138,10 +138,11 @@
   version: none
 
 - name: fortran-lua53
-  url: interkosmos/fortran-lua53
+  github: interkosmos/fortran-lua53
   description: Fortran 2008 interface bindings to Lua 5.3
   categories: interfaces
   tags: lua
+  license: ISC
   version: none
 
 - name: tcp-client-server
