my software with at least 5 stars

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -591,6 +591,13 @@
   tags: toml
   license: "Apache-2.0 OR MIT"
 
+- name: os
+  github: MarDiehl/stdlib_os
+  description: Selected routines from python's os module (meant for stdlib)
+  categories: io
+  tags: file C-interface directory access
+  license: MIT
+
 # --- Graphics ---
 
 - name: f03gl
@@ -1251,6 +1258,13 @@
   categories: numerical
   tags: fast-multipole-method
   license: Apache-2.0
+
+- name: DAMASK
+  github: eisenforschung/DAMASK
+  description: A unified multi-physics crystal plasticity simulation package
+  categories: scientific
+  tags: plasticity simulation material multi-physics
+  license: GPL-3.0
 
 # --- Examples / demos / templates ---
 
