--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -104,6 +104,13 @@
   description: A Modern Fortran Library for Astrodynamics
   categories: libraries
   license: BSD-3-Clause
+  
+- name: The NJOY Nuclear Data Processing System
+  github: njoy/NJOY2016
+  description: Package for producing pointwise and multigroup nuclear cross sections and related quantities from evaluated nuclear data in the ENDF format
+  categories: libraries
+  license: BSD-3-Clause
+
 
 # --- Interfaces ---
 
