added 2 interpolation and 4 ode packages

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -735,12 +735,54 @@
   tags: spline interpolation extrapolation integration integral
   license: BSD-3-Clause
 
+- name: PCHIP
+  github: jacobwilliams/PCHIP
+  description: Piecewise Cubic Hermite Interpolation Package
+  categories: numerical
+  tags: hermite spline interpolation integration integral
+  license: BSD-3-Clause
+
+- name: regridpack
+  github: jacobwilliams/regridpack
+  description: Suite of Fortran routines for interpolating values between one-, two-, three-, and four-dimensional arrays defined on uniform or nonuniform orthogonal grids
+  categories: numerical
+  tags: linear cubic interpolation
+  license: BSD-3-Clause
+
 - name: FOODIE
   github: Fortran-FOSS-Programmers/FOODIE
   description: Fortran Object-Oriented Differential-equations Integration Environment
   categories: numerical
   tags: ode pde euler runge kutta
   license: GPL-3.0
+
+- name: ddeabm
+  github: jacobwilliams/ddeabm
+  description: Modern Fortran implementation of the DDEABM Adams-Bashforth algorithm
+  categories: numerical
+  tags: ode adams-bashforth
+  license: BSD-3-Clause
+
+- name: dop853
+  github: jacobwilliams/dop853
+  description: Modern Fortran Edition of Hairer's DOP853 ODE Solver
+  categories: numerical
+  tags: ode runge kutta
+  license: BSD-3-Clause
+
+- name: FLINT
+  github: princemahajan/FLINT
+  description: Fortran Library for numerical INTegration of differential equations
+  categories: numerical
+  tags: ode runge kutta
+  license: Apache-2.0
+
+- name: ODEPACK
+  url: https://computing.llnl.gov/projects/odepack/software
+  description: A Systematized Collection of ODE Solvers (FORTRAN 77)
+  categories: numerical
+  tags: ode runge kutta adams-bashforth
+  license: Public domain
 
 - name: fgsl
   github: reinh-bader/fgsl
