Add incompact3d to package index
See https://github.com/xcompact3d/Incompact3d

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -912,6 +912,11 @@
   description: Reverse Polish Notation calculator for interactive console use
   categories: numerical
 
+- name: Incompact3d
+  github: xcompact3d/incompact3d
+  description: Solver for the incompressible Navier-Stokes equations 
+  categories: numerical
+
 # --- Scientific codes ---
 
 - name: "DFTB+"
