Added Numerical Recipes in Quantum Information Theory and Quantum Computing, fixed typos

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -241,13 +241,21 @@ reference-courses:
 #  Note: urls are publisher's site or DOI link
 #
 reference-books:
+  - author: Ramkarthik, M. S., and Solanki, P. D.
+    year: 2021
+    title: Numerical Recipes in Quantum Information Theory and Quantum Computing: An Adventure in FORTRAN 90
+    url: https://www.routledge.com/Numerical-Recipes-in-Quantum-Information-Theory-and-Quantum-Computing-An/Ramkarthik-Solanki/p/book/9780367759285
+    edition: 1st ed
+    location: Boca Raton
+    publisher: CRC Press
+    
   - author: Metcalf, M., Reid, J. and Cohen, M.
     year: 2018
     title: Modern Fortran Explained
     url: https://global.oup.com/academic/product/modern-fortran-explained-9780198811893
     edition: 5th ed
     location: Oxford, UK
-    publisher: Oxford Universtiy Press
+    publisher: Oxford University Press
 
   - author: Curcic, M.
     year: 2020
@@ -263,7 +271,7 @@ reference-books:
     url: https://www.ce-fortran.com/
     edition: 1st ed
     location: Oxford, UK
-    publisher: Oxford Universtiy Press
+    publisher: Oxford University Press
 
   - author: Markus, A.
     year: 2012
