added PRACE Course: Fortran for Scientific Computing

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -112,6 +112,9 @@ reference-courses:
     url: https://doku.lrz.de/display/PUBLIC/Programming+with+Fortran
     description: >-
       course offered at the Leibniz-Rechenzentrum
+      
+  - name: "PRACE Course: Fortran for Scientific Computing"
+    url: https://www.futurelearn.com/courses/fortran-for-scientific-computing
 
   - name: "PRACE Course: Advanced Fortran Topics"
     url: https://doku.lrz.de/display/PUBLIC/PRACE+Course%3A+Advanced+Fortran+Topics
