Add fparser to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -278,6 +278,13 @@
   categories: programming preview
   tags: documentation
 
+- name: fparser
+  github: stfc/fparser
+  description: Fortran parser written purely in Python which supports Fortran 2003 and some Fortran 2008
+  categories: programming
+  tags: parser
+  license: BSD-3-Clause
+
 - name: fypp
   github: aradi/fypp
   description: Python powered Fortran preprocessor
