Add pFlogger to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -495,6 +495,13 @@
   license: BSD-3-Clause
   version: none
 
+- name: pFlogger
+  github: Goddard-Fortran-Ecosystem/pFlogger
+  description: A parallel Fortran logger (based on the design of the Python logger)
+  categories: io
+  tags: logger mpi
+  license: NASA-1.3
+
 - name: json-fortran
   github: jacobwilliams/json-fortran
   description: A Fortran 2008 JSON API
