Fix name in package entry

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1383,7 +1383,7 @@
   tags: container template
   license: Apache-2.0 
   
-  - name: gFTL
+  - name: yaFyaml
   github: Goddard-Fortran-Ecosystem/yaFyaml
   description: Yet another Fortran YAML library
   categories: configuration 
