One more package
Also corrected categories on previous submissions.  Did not notice that there was a short-list.

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1386,13 +1386,22 @@
 - name: gFTL
   github: Goddard-Fortran-Ecosystem/gFTL
   description: Templates for STL-like Fortran implementations of containers for arbitrary types (Vector, Set, Map, Deque, Stack, Queue, ...)
-  categories: containers 
+  categories: programming 
   tags: container template
   license: Apache-2.0 
   
-  - name: yaFyaml
+- name: gFTL-shared
+  github: Goddard-Fortran-Ecosystem/gFTL-shared
+  description: Instantiations of gFTL templates of common containers for intrinsic types
+  categories: programming
+  tags: container template
+  license: Apache-2.0 
+   
+- name: yaFyaml
   github: Goddard-Fortran-Ecosystem/yaFyaml
   description: Yet another Fortran YAML library
-  categories: configuration 
+  categories: libraries 
   tags: configuration yaml
-  license: Apache-2.0 
+  license: Apache-2.0
+
+
