--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1341,6 +1341,12 @@
   tags: plasticity simulation material multi-physics
   license: GPL-3.0
 
+- name: Cantera
+  github: Cantera/cantera
+  description: Chemical kinetics, thermodynamics, and transport tool suite
+  categories: scientific
+  license: BSD-3-Clause
+
 # --- Examples / demos / templates ---
 
 - name: Fortran 2018 examples
