Fix title in learning resources

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -246,7 +246,7 @@ reference-courses:
 reference-books:
   - author: Ramkarthik, M. S., and Solanki, P. D.
     year: 2021
-    title: Numerical Recipes in Quantum Information Theory and Quantum Computing: An Adventure in FORTRAN 90
+    title: "Numerical Recipes in Quantum Information Theory and Quantum Computing: An Adventure in FORTRAN 90"
     url: https://www.routledge.com/Numerical-Recipes-in-Quantum-Information-Theory-and-Quantum-Computing-An/Ramkarthik-Solanki/p/book/9780367759285
     edition: 1st ed
     location: Boca Raton
