--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -382,6 +382,14 @@
   categories: programming
   tags: formatter converter
   version: none
+  
+- name: fortran-error-handler
+  github: samharrison7/fortran-error-handler
+  description: Comprehensive error handling framework for Modern Fortran
+  categories: programming
+  tags: errors logging fpm
+  version: none
+  license: MIT
 
 # --- Data types ---
 
