--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -187,7 +187,7 @@
   categories: interfaces
   tags: gpu compute accelerator
 
-- name: foryxima
+- name: fortyxima
   url: https://bitbucket.org/aradi/fortyxima/src/develop/
   description: File system manipulation and unit testing framework
   categories: interfaces programming
