Add programming in Fortran to name
Co-authored-by: Ondřej Čertík <ondrej@certik.us>

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -119,7 +119,7 @@ reference-courses:
   - name: "PRACE Course: Advanced Fortran Topics"
     url: https://doku.lrz.de/display/PUBLIC/PRACE+Course%3A+Advanced+Fortran+Topics
 
-  - name: "The 'F' Word"
+  - name: "The 'F' Word - Programming in Fortran"
     url: https://www.youtube.com/playlist?list=PLRO4xf5MdhAv9CNTETor75rANZtBqPVgQ
     description: >-
       modern Fortran for developing an extensible library that can be used to solve conservation laws (PDEs) using spectral and spectral element methods
