Add Elk to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -260,7 +260,7 @@
   categories: numerical interfaces scientific
   tags: openmp sparse-matrix sparse-blas linear-algebra
   license: LGPL-3.0-or-later
-  
+
 # --- Compiler
 
 - name: hipfort
@@ -952,6 +952,13 @@
   categories: scientific
   license: LGPL-3.0-or-later
   tags: tight-binding quantum-mechanics density-functional-theory
+
+- name: Elk
+  url: https://elk.sourceforge.io/
+  description: An all-electron full-potential linearised augmented-plane wave (LAPW) code with many advanced features
+  categories: scientific
+  license: GPL-3.0
+  tags: density-functional-theory
 
 - name: LATTE
   github: lanl/LATTE
