Add pencil-code to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1176,6 +1176,13 @@
   license: GPL-2.0
   version: none
 
+- name: pencil-code
+  github: pencil-code/pencil-code
+  description: A high-order finite-difference code for compressible hydrodynamic flows with magnetic fields and particles 
+  categories: scientific
+  tags: finite-difference hydrodynamics magnetic-field particles
+  license: GPL-2.0
+
 - name: MOM6
   github: NOAA-GFDL/MOM6
   description: Modular Ocean Model
