--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -256,10 +256,11 @@
 
 - name: librsb
   url: http://librsb.sourceforge.net/
-  description: A shared memory parallel sparse matrix computations library for the Recursive Sparse Blocks format 
+  description: A shared memory parallel sparse matrix computations library for the Recursive Sparse Blocks format implementing the Sparse BLAS
   categories: numerical interfaces scientific
-  tags: openmp sparse-matrix sparse-blas linear-algebra
+  tags: linear-algebra openmp
   license: LGPL-3.0-or-later
+  version: 1.3
   
 # --- Compiler
 
