Fixup librsb description

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -256,7 +256,7 @@
 
 - name: librsb
   url: http://librsb.sourceforge.net/
-  description: A shared memory parallel sparse matrix computations library for the Recursive Sparse Blocks format implementing the Sparse BLAS
+  description: A shared memory parallel sparse matrix computations library for the Recursive Sparse Blocks format implementing the Sparse BLAS standard
   categories: numerical interfaces scientific
   tags: linear-algebra openmp
   license: LGPL-3.0-or-later
