Add PROPACK to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -712,6 +712,13 @@
   tags: blas linear-algebra
   license: BSD-3-Clause
 
+- name: PROPACK
+  url: http://sun.stanford.edu/~rmunk/PROPACK/
+  description: Software package for computing the singular value decomposition of large and sparse or structured matrices
+  categories: numerical
+  tags: linear-algebra svd lanczos-bidiagonalization openmp
+  license: BSD-3-Clause
+
 - name: ElmerFEM
   github: ElmerCSC/elmerfem
   description: Finite element software for numerical solution of partial differential equations
