Add PROPACK version

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -718,6 +718,7 @@
   categories: numerical
   tags: linear-algebra svd lanczos-bidiagonalization openmp
   license: BSD-3-Clause
+  version: 2.1
 
 - name: ElmerFEM
   github: ElmerCSC/elmerfem
