Add FATODE to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -720,6 +720,14 @@
   license: BSD-3-Clause
   version: 2.1
 
+- name: FATODE
+  github: https://github.com/ComputationalScienceLaboratory/FATODE
+  description: A Fortran library for the integration of ordinary differential equations with direct and adjoint sensitivity analysis capabilities
+  categories: numerical scientific
+  tags: ode-solver
+  license: GPL-3.0
+  version: 1.2
+
 - name: ElmerFEM
   github: ElmerCSC/elmerfem
   description: Finite element software for numerical solution of partial differential equations
