Add SLICOT to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -721,12 +721,17 @@
   version: 2.1
 
 - name: FATODE
-  github: https://github.com/ComputationalScienceLaboratory/FATODE
+  github: ComputationalScienceLaboratory/FATODE
   description: A Fortran library for the integration of ordinary differential equations with direct and adjoint sensitivity analysis capabilities
   categories: numerical scientific
   tags: ode-solver
   license: GPL-3.0
   version: 1.2
+
+- name: SLICOT
+  github: SLICOT/SLICOT-Reference
+  description: A Fortran subroutines library for systems and control
+  categories: numerical scientific
 
 - name: ElmerFEM
   github: ElmerCSC/elmerfem
