Add 2DECOMP&FFT to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -965,6 +965,14 @@
   description: Solver for the incompressible Navier-Stokes equations 
   categories: numerical
 
+- name: 2DECOMP&FFT
+  url: http://www.2decomp.org/
+  description: Library for 2D pencil decomposition and distributed Fast Fourier Transform
+  categories: numerical scientific
+  tags: fft parallel distributed-memory openmpi
+  license: BSD-3-Clause
+  version: 1.5.847
+
 # --- Scientific codes ---
 
 - name: "DFTB+"
