Added SeisSol to package index

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1382,6 +1382,13 @@
   categories: scientific
   license: BSD-3-Clause
 
+- name: SeisSol 
+  github: SeisSol/SeisSol
+  description: A software for the numerical simulation of seismic wave phenomena and earthquake dynamics
+  categories: scientific
+  tags: hpc earthquakes dynamic-rupture
+  license: BSD-3-Clause
+  
 # --- Examples / demos / templates ---
 
 - name: Fortran 2018 examples
