--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Deploy documentation
       uses: JamesIves/github-pages-deploy-action@3.7.1
-      if: github.event_name == 'push' && github.repository == 'awvwgk/fortran-lang.org' && github.ref == 'refs/heads/sphinx'
+      if: github.event_name == 'push' && github.repository == 'henilp105/fortran-lang.org' && github.ref == 'refs/heads/master/sphinx'
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: deploy
