--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Install sphinx
       run: pip3 install --user -r requirements.txt
       
+    - name: ls source directory
+      run: ls
+      
     - name: Build page
       run: make html
       
