--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       
     - run: touch build/html/.nojekyll
 
-    - name: Commit and push to gh-pages
+    - name: Commit and push to gh-pages sphinx
       uses: EndBug/add-and-commit@v4.4.0
       with:
         cwd: ${{env.PUBLISH_DIR}}
