--- a/.github/workflows/buildSite.yml
+++ b/.github/workflows/buildSite.yml
@@ -83,7 +83,7 @@ jobs:
       
     - run: touch build/html/.nojekyll
 
-    - name: Deploy documentation
+    - name: Deploy documentation sphinx
       uses: JamesIves/github-pages-deploy-action@3.7.1
       if: github.event_name == 'push' && github.repository == 'henilp105/fortran-lang.org' && github.ref == 'refs/heads/master'
       with:
