Add NUFFT to package index (#397)

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -953,6 +953,13 @@
   description: Solver for the incompressible Navier-Stokes equations 
   categories: numerical
 
+- name: NUFFT
+  url: https://cims.nyu.edu/cmcl/nufft/nufft.html
+  description: Non-Uniform Fast Fourier Transforms
+  categories: numerical
+  tags: non-uniform-fft fft
+  license: GPL-2.0-or-later
+
 # --- Scientific codes ---
 
 - name: "DFTB+"
