--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -721,6 +721,19 @@
   license: BSD-3-Clause
   version: 2.1
 
+- name: FATODE
+  github: ComputationalScienceLaboratory/FATODE
+  description: A Fortran library for the integration of ordinary differential equations with direct and adjoint sensitivity analysis capabilities
+  categories: numerical scientific
+  tags: ode-solver
+  license: GPL-3.0
+  version: 1.2
+
+- name: SLICOT
+  github: SLICOT/SLICOT-Reference
+  description: A Fortran subroutines library for systems and control
+  categories: numerical scientific
+
 - name: ElmerFEM
   github: ElmerCSC/elmerfem
   description: Finite element software for numerical solution of partial differential equations
@@ -952,6 +965,14 @@
   github: xcompact3d/incompact3d
   description: Solver for the incompressible Navier-Stokes equations 
   categories: numerical
+
+- name: 2DECOMP&FFT
+  url: http://www.2decomp.org/
+  description: Library for 2D pencil decomposition and distributed Fast Fourier Transform
+  categories: numerical scientific
+  tags: fft parallel distributed-memory openmpi
+  license: BSD-3-Clause
+  version: 1.5.847
 
 - name: OpenFFT
   url: http://www.openmx-square.org/openfft/
