--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-sphinx
+Sphinx
 sphinx-panels
 ablog
-pydata-sphinx-theme
+pydata-sphinx-theme==0.8.1
 myst-parser
-sphinx_design
-sphinx_copybutton
