added QNSTOP and VTMOP (open source ACM TOMS algs from Dr. Watson's lab) to package_index.yml

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1488,4 +1488,18 @@
   tags: configuration yaml
   license: Apache-2.0
 
+- name: VTMOP
+  github: vtopt/VTMOP
+  description: Solver for Blackbox Multiobjective Optimization Problems.
+  categories: numerical
+  tags: global-optimization simulation-optimization blackbox-optimization multiobjective-optimization multicriteria-optimization response-surface-methodology acm-toms
+  license: MIT
+  version: none
 
+- name: QNSTOP
+  github: vtopt/qnstop
+  description: Quasi-Newton Algorithm for Stochastic Optimization.
+  categories: numerical
+  tags: quasi-newton-optimization stochastic-optimization acm-toms
+  license: MIT
+  version: none
