--- a/.github/workflows/buildSite.yml
+++ b/.github/workflows/buildSite.yml
@@ -77,6 +77,9 @@ jobs:
 
     - name: Install sphinx
       run: pip3 install --user -r requirements.txt
+    
+    - name: run python script
+      run: python learn.py
       
     - name: Build page
       run: make html
