--- a/.github/workflows/buildSite.yml
+++ b/.github/workflows/buildSite.yml
@@ -81,6 +81,9 @@ jobs:
     - name: run python script
       run: python learn.py
       
+    - name: Checkout page source
+      uses: actions/checkout@v2
+      
     - name: Build page
       run: make html
       
