--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -1424,6 +1424,12 @@
   categories: scientific
   tags: hpc earthquakes dynamic-rupture
   license: BSD-3-Clause
+
+- name: MOKIT
+  gitlab: jxzou/mokit
+  description: Molecular orbital transfer utilities and automatic multi-reference calculations
+  categories: scientific
+  tags: electronic-structure quantum-chemistry casscf
   
 # --- Examples / demos / templates ---
 
