--- a/.github/workflows/buildPRPreview.yml
+++ b/.github/workflows/buildPRPreview.yml
@@ -43,19 +43,6 @@ jobs:
         path: ${{env.PUBLISH_DIR}}
         ref: 'gh-pages' 
     
-    # Install ruby 2.7.x
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 2.7
-
-    # Setup Jekyll in SRC_DIR
-    - name: Setup Jekyll
-      run: |
-        cd ${{env.SRC_DIR}}
-        sudo gem install bundler
-        bundle config path .bundle
-        bundle install
-    
     # Sets Jekyll output directory using PR id
     - name: Define output directory
       run: echo "BUILD_DIR=pr/${{github.event.issue.number}}" >> $GITHUB_ENV
@@ -75,27 +62,27 @@ jobs:
         cd ${{env.SRC_DIR}}/_data
         wget ${{env.FPM_INDEX}}
         mv index.json fpm_registry_index.json
+        
+    - name: Checkout page source
+      uses: actions/checkout@v2
+      
+    - name: Setup Python
+      uses: actions/setup-python@v1
 
-    # Run Jekyll build and copy output to PUBLISH_DIR
-    - name: Build Jekyll Site
-      run: |
-        cd ${{env.SRC_DIR}}
-        bundle exec jekyll build --future -d _site/${BUILD_DIR}
-        cp -r _site/* ../${{env.PUBLISH_DIR}}/
-        touch ../${{env.PUBLISH_DIR}}/.nojekyll
-    - name: Upload jekyll site as artifact
-      uses: actions/upload-artifact@v2
+    - name: Install sphinx
+      run: pip3 install --user -r requirements.txt
+      
+    - name: Build page
+      run: make html
+      
+    - run: touch build/html/.nojekyll
+
+    - name: Deploy documentation sphinx
+      uses: JamesIves/github-pages-deploy-action@3.7.1
+      if: github.event_name == 'push' && github.repository == 'henilp105/fortran-lang.org' && github.ref == 'refs/heads/master'
       with:
-        name: jekyllSite
-        path: |
-          ${{env.PUBLISH_DIR}}/${{env.BUILD_DIR}}
-    - name: Save PR number and BUILD_DIR
-      run: |
-          mkdir -p ./pr
-          echo ${{env.BUILD_DIR}} > ./pr/BUILD_DIR
-          echo ${{github.event.issue.number}} > ./pr/NR
-    - uses: actions/upload-artifact@v2
-      with:
-        name: pr
-        path: pr/
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages/pr
+        FOLDER: build/html
+        CLEAN: false
 
