--- a/.github/workflows/buildsite_sphinx.yml
+++ b/.github/workflows/buildsite_sphinx.yml
@@ -25,6 +25,8 @@ jobs:
       
     - name: Setup Python
       uses: actions/setup-python@v1
+    - name: check directory
+      run: ls
 
     - name: Install sphinx
       run: pip3 install --user -r requirements.txt
