--- a/.github/workflows/buildsite_sphinx.yml
+++ b/.github/workflows/buildsite_sphinx.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v1
     - name: check directory
-      run: ls
+      run: cd fortran-lang.org
 
     - name: Install sphinx
       run: pip3 install --user -r requirements.txt
