jinja image templating

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ pydata-sphinx-theme==0.8.1
 myst-parser
 sphinx_design
 sphinx_copybutton
-sphinx-jinja
+sphinx-jinja==2.0.2
 matplotlib
+jinja2==3.1.2
 numpy
 IPython
 numpydoc
