revert jinja image templating

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ pydata-sphinx-theme==0.8.1
 myst-parser
 sphinx_design
 sphinx_copybutton
-sphinx-jinja==2.0.2
+sphinx-jinja
 matplotlib
-jinja2==3.0.3
+jinja2
 numpy
 IPython
 numpydoc
