--- a/.github/workflows/fortran_packages.yml
+++ b/.github/workflows/fortran_packages.yml
@@ -1,4 +1,4 @@
-# Github action to build github activity
+# Github action to build fortran_packages.
 #
 
 name: fortran_packages 
@@ -21,7 +21,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v1
 
-    - name: Install github-activity
+    - name: Install python libraries
       run: pip3 install --user -r requirements.txt
       
     - name: fortran_package 
