--- a/.github/workflows/fortran_packages.yml
+++ b/.github/workflows/fortran_packages.yml
@@ -36,5 +36,5 @@ jobs:
     - name: Push changes # push the output folder to your repo
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.METRICS_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         force: true
