--- a/.github/workflows/fortran_packages.yml
+++ b/.github/workflows/fortran_packages.yml
@@ -29,6 +29,7 @@ jobs:
     
     - name: Commit files # transfer the new html files back into the repository
       run: |
+        git config --local user.name "henilp105"
         git add source
         git commit -m "fortran_package"
     - name: Push changes # push the output folder to your repo
