--- a/.github/workflows/fortran_packages.yml
+++ b/.github/workflows/fortran_packages.yml
@@ -30,7 +30,8 @@ jobs:
     - name: Commit files # transfer the new html files back into the repository
       run: |
         git config --local user.name "henilp105"
-        git add source
+        git add fortran_learn.json
+	      git add fortran_package.json
         git commit -m "fortran_package"
     - name: Push changes # push the output folder to your repo
       uses: ad-m/github-push-action@master
