--- a/.github/workflows/fortran_package.yml
+++ b/.github/workflows/fortran_package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: fortran_package 
       run: python fortran_package.py
       
-    - name: Commit files # transfer the new html files back into the repository
+    - name: Commit files and transfer the files back into the repository
       run: |
         git config --local user.name "henilp105" 
         git add fortran_learn.json
