--- a/.github/workflows/fortran_package.yml
+++ b/.github/workflows/fortran_package.yml
@@ -32,6 +32,7 @@ jobs:
         git config --local user.name "henilp105" 
         git add fortran_learn.json
         git add fortran_package.json
+        git add source
         git commit -m "fortran package"
     - name: Push changes # push the output folder to your repo
       uses: ad-m/github-push-action@master
