--- a/.github/workflows/fortran_package.yml
+++ b/.github/workflows/fortran_package.yml
@@ -30,6 +30,7 @@ jobs:
         git config --local user.name "henilp105" 
         git add fortran_learn.json
         git add fortran_package.json
+        git add contributor.json
         git add source
         git commit -m "fortran package"
     - name: Push changes # push the output folder to your repo
