--- a/.github/workflows/buildPRPreview.yml
+++ b/.github/workflows/buildPRPreview.yml
@@ -42,22 +42,59 @@ jobs:
       with:
         path: ${{env.PUBLISH_DIR}}
         ref: 'gh-pages' 
-        
-    - name: Setup Python
-      uses: actions/setup-python@v1
-
-    - name: Install sphinx
-      run: cd ${{env.SRC_DIR}} && pip3 install --user -r requirements.txt
-      
-    - name: Build page
-      run: cd ${{env.SRC_DIR}} && make html
-
-    - name: Deploy documentation sphinx
-      uses: JamesIves/github-pages-deploy-action@3.7.1
-      if: github.event.issue.pull_request && contains(github.event.comment.body,'#build_preview')
+    
+    # Install ruby 2.7.x
+    - uses: ruby/setup-ruby@v1
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages/pr/${{github.event.issue.number}}
-        FOLDER: ${{env.SRC_DIR}}/build/html
-        CLEAN: true
-        
+        ruby-version: 2.7
+
+    # Setup Jekyll in SRC_DIR
+    - name: Setup Jekyll
+      run: |
+        cd ${{env.SRC_DIR}}
+        sudo gem install bundler
+        bundle config path .bundle
+        bundle install
+    
+    # Sets Jekyll output directory using PR id
+    - name: Define output directory
+      run: echo "BUILD_DIR=pr/${{github.event.issue.number}}" >> $GITHUB_ENV
+
+    # Appends PR-based output directory to Jekyll baseurl variable
+    - name: Update Jekyll site config
+      run: |
+        cd ${{env.SRC_DIR}}
+        grep baseurl _config.yml|grep -v "#" |awk -F : '{print $2}' | xargs > base_url
+        sed -i '/baseurl:/d' _config.yml
+        echo "baseurl: $(cat base_url)/${{env.BUILD_DIR}}" >> _config.yml
+        echo "pull_request: ${{github.event.issue.number}}" >> _config.yml
+    
+    # Download latest fpm-registry index
+    - name: Download fpm-registry index
+      run: |
+        cd ${{env.SRC_DIR}}/_data
+        wget ${{env.FPM_INDEX}}
+        mv index.json fpm_registry_index.json
+
+    # Run Jekyll build and copy output to PUBLISH_DIR
+    - name: Build Jekyll Site
+      run: |
+        cd ${{env.SRC_DIR}}
+        bundle exec jekyll build --future -d _site/${BUILD_DIR}
+        cp -r _site/* ../${{env.PUBLISH_DIR}}/
+        touch ../${{env.PUBLISH_DIR}}/.nojekyll
+    - name: Upload jekyll site as artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: jekyllSite
+        path: |
+          ${{env.PUBLISH_DIR}}/${{env.BUILD_DIR}}
+    - name: Save PR number and BUILD_DIR
+      run: |
+          mkdir -p ./pr
+          echo ${{env.BUILD_DIR}} > ./pr/BUILD_DIR
+          echo ${{github.event.issue.number}} > ./pr/NR
+    - uses: actions/upload-artifact@v2
+      with:
+        name: pr
+        path: pr/
